fix: add margin-bottom to body and h2 elements for improved spacing

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   padding-left: 40px;
   padding-right: 40px; */
   padding: 20px 40px;
+  margin-bottom: 60px;
 }
 
 aside {
@@ -41,6 +42,7 @@ h1 {
 
 h2 {
   font-size: 40px;
+  margin-bottom: 30px;
 }
 
 h3 {
